css: fix no picture post become lost, fix archive title overflow

--- a/src/css/default.css
+++ b/src/css/default.css
@@ -314,6 +314,10 @@ body > section:nth-of-type(2) div#post-list div.grid {
     position: absolute;
     height: auto;
 }
+body > section:nth-of-type(2) div#post-list > div.group {
+    position: relative;
+    min-height: 10rem;
+}
 
 /* index: styling for archive lisr category text */
 body > section:nth-of-type(2) div#post-list div.grid > div:nth-of-type(1) > div:nth-of-type(1) > a {
